PCI8154/Library/Include/pci_8154.h

U16 FNTYPE _8154_db51_W_HSL_DIO_In(U16 card_ID, U16 slave_No, U32 *in_data);
U16 FNTYPE _8154_db51_W_HSL_DIO_Channel_In(U16 card_ID, U16 slave_No, U16 channel, U16 *in_data);
U16 FNTYPE _8154_db51_W_HSL_DIO_Out(U16 card_ID, U16 slave_No, U32 out_data);
U16 FNTYPE _8154_db51_W_HSL_DIO_Channel_Out(U16 card_ID, U16 slave_No, U16 channel, U16 out_data);
U16 FNTYPE _8154_db51_W_HSL_DI8DO8_DIO_In(U16 card_ID, U16 slave_No, U16 *in_data);
U16 FNTYPE _8154_db51_W_HSL_DI8DO8_DIO_Channel_In(U16 card_ID, U16 slave_No, U16 channel, U16 *in_data);
U16 FNTYPE _8154_db51_W_HSL_DI8DO8_DIO_Out(U16 card_ID, U16 slave_No, U16 out_data);
U16 FNTYPE _8154_db51_W_HSL_DI8DO8_DIO_Channel_Out(U16 card_ID, U16 slave_No, U16 channel, U16 out_data);
U16 FNTYPE _8154_db51_W_HSL_Read_DIO_Out(U16 card_ID, U16 slave_No, U32 *out_data_in_ram);
U16 FNTYPE _8154_db51_W_HSL_Read_DIO_Channel_Out(U16 card_ID, U16 slave_No, U16 channel, U16 *out_channel_data_in_ram);
U16 FNTYPE _8154_db51_W_HSL_Read_DI8DO8_Out(U16 card_ID, U16 slave_No, U16 *out_data_in_ram);
U16 FNTYPE _8154_db51_W_HSL_Read_DI8DO8_Channel_Out(U16 card_ID, U16 slave_No, U16 channel, U16 *out_channel_data_in_ram);
U16 FNTYPE _8154_db51_W_HSL_Set_In_Out_Logic(U16 card_ID, U16 slave_No, U16 Input_Logic, U16 Output_Logic);
U16 FNTYPE _8154_db51_W_HSL_AI_Start_Read(U16 card_ID);
U16 FNTYPE _8154_db51_W_HSL_AI_Stop_Read(U16 card_ID);
U16 FNTYPE _8154_db51_W_HSL_AI_Channel_In(U16 card_ID, U16 slave_No, U16 channel, F64 *ai_data);
U16 FNTYPE _8154_db51_W_HSL_AI_SetConfig(U16 card_ID, U16 slave_No, U16 signal_range, U16 signal_type, U16 cjc_status);
U16 FNTYPE _8154_db51_W_HSL_AI_GetConfig(U16 card_ID, U16 slave_No, U16 *signal_range, U16 *signal_type, U16 *cjc_status);
U16 FNTYPE _8154_db51_W_HSL_AI_OffsetCalib(U16 card_ID, U16 slave_No);
U16 FNTYPE _8154_db51_W_HSL_AI_SpanCalib(U16 card_ID, U16 slave_No);
U16 FNTYPE _8154_db51_W_HSL_AI_WriteDefault(U16 card_ID, U16 slave_No);
U16 FNTYPE _8154_db51_W_HSL_AI_SetCJCOffset(U16 card_ID, U16 slave_No, F64 CJC_data2);
U16 FNTYPE _8154_db51_W_HSL_AI_GetCJCOffset(U16 card_ID, U16 slave_No, F64 *CJC_data);
U16 FNTYPE _8154_db51_W_HSL_AI_SetChannelStatus(U16 card_ID, U16 slave_No, U32 enable_chans);
U16 FNTYPE _8154_db51_W_HSL_AI_GetChannelStatus(U16 card_ID, U16 slave_No, U32 *enable_chans);
U16 FNTYPE _8154_db51_W_HSL_DIO_Memory_In(U16 card_ID, U16 *data_in);
U16 FNTYPE _8154_db51_W_HSL_DIO_Memory_Out(U16 card_ID, U16 *data_out);
// AI16AO2 Module Use
U16 FNTYPE _8154_db51_W_HSL_AI_Set_Last_Channel(U16 card_ID, U16 slave_No, U16 Last_Channel); // Used to set last channel
U16 FNTYPE _8154_db51_W_HSL_AI_Get_Last_Channel(U16 card_ID, U16 slave_No, U16 *Last_Channel); // Used to set last channel
U16 FNTYPE _8154_db51_W_HSL_AI_Get_Version(U16 card_ID, U16 slave_No, U8 *Ver);
U16 FNTYPE _8154_db51_W_HSL_AIO_LoadConfig(U16 card_ID, U16 slave_No);
U16 FNTYPE _8154_db51_W_HSL_AIO_SaveConfig(U16 card_ID, U16 slave_No);
U16 FNTYPE _8154_db51_W_HSL_AO_Channel_Out(U16 card_ID, U16 slave_No, U16 AO_Ch_No, F64 AO_data);
U16 FNTYPE _8154_db51_W_HSL_AIO_Channel_InOut(U16 card_ID, U16 slave_No, U16 AI_CH_No, F64 *AI_data, U16 AO_Ch_No, F64 AO_data);
U16 FNTYPE _8154_db51_W_HSL_AO_Channel_In(U16 card_ID, U16 slave_No, U16 AO_Ch_No, U16 *AO_data);
U16 FNTYPE _8154_db51_W_HSL_AO_OffsetCalib(U16 card_ID, U16 slave_No, U16 DA_CH);
U16 FNTYPE _8154_db51_W_HSL_AO_GainCalib(U16 card_ID, U16 slave_No, U16 DA_CH);
// TC08 Use
U16 FNTYPE _8154_db51_W_HSL_TC08_Offset_Calib(U16 card_ID, U16 slave_No, U16 channel);
U16 FNTYPE _8154_db51_W_HSL_TC08_Span_Calib(U16 card_ID, U16 slave_No, U16 channel);
U16 FNTYPE _8154_db51_W_HSL_TC08_Get_Temperature(U16 card_ID, U16 slave_No, U16 channel, U16 TC_type, F64 *Temperature);
/****************************************************************************/
/* HSL Motion Function Declerations                                        */
/****************************************************************************/
I16 FNTYPE _8154_db51_HSL_M_get_version(I16 card_ID, I16 M_No, U8 *CPLD_Ver, U32 *Kernel_Ver, U32 *Software_Ver);
// Pulse I/O Configuration
I16 FNTYPE _8154_db51_HSL_M_set_pls_outmode(I16 card_ID, I16 AxisNo, I16 pls_outmode);
I16 FNTYPE _8154_db51_HSL_M_set_pls_iptmode(I16 card_ID, I16 AxisNo, I16 pls_iptmode, I16 pls_logic);
I16 FNTYPE _8154_db51_HSL_M_set_feedback_src(I16 card_ID, I16 AxisNo, I16 Src);
// Velocity Mode motion
I16 FNTYPE _8154_db51_HSL_M_tv_move(I16 card_ID, I16 AxisNo, F64 StrVel, F64 MaxVel, F64 Tacc);
I16 FNTYPE _8154_db51_HSL_M_sv_move(I16 card_ID, I16 AxisNo, F64 StrVel, F64 MaxVel, F64 Tacc, F64 SVacc);
I16 FNTYPE _8154_db51_HSL_M_v_change(I16 card_ID, I16 AxisNo, F64 NewVel, F64 Tacc);
I16 FNTYPE _8154_db51_HSL_M_sd_stop(I16 card_ID, I16 AxisNo, F64 Tdec);
I16 FNTYPE _8154_db51_HSL_M_emg_stop(I16 card_ID, I16 AxisNo);//ok
I16 FNTYPE _8154_db51_HSL_M_fix_speed_range(I16 card_ID, I16 AxisNo, F64 MaxVel);
I16 FNTYPE _8154_db51_HSL_M_unfix_speed_range(I16 card_ID, I16 AxisNo);
I16 FNTYPE _8154_db51_HSL_M_get_current_speed(I16 card_ID, I16 AxisNo, F64 *speed);
I16 FNTYPE _8154_db51_HSL_M_verify_speed(I16 card_ID, I16 M_No, F64 StrVel, F64 MaxVel, F64 *minAccTime, F64 *maxAccT, F64 MaxSpeed);
// Single Axis Motion
I16 FNTYPE _8154_db51_HSL_M_start_tr_move(I16 card_ID, I16 AxisNo, F64 Dist, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec);
I16 FNTYPE _8154_db51_HSL_M_start_ta_move(I16 card_ID, I16 AxisNo, F64 Pos, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec);