PCI8154/Library/Include/pci_8154.bas

Declare Function B_8154_db51_W_HSL_DIO_In Lib "8154.dll" Alias "_8154_db51_W_HSL_DIO_In" (ByVal card_ID As Integer, ByVal slave_No As Integer, in_data As Long) As Integer
Declare Function B_8154_db51_W_HSL_DIO_Channel_In Lib "8154.dll" Alias "_8154_db51_W_HSL_DIO_Channel_In" (ByVal card_ID As Integer, ByVal slave_No As Integer, ByVal Channel As Integer, in_data As Integer) As Integer
Declare Function B_8154_db51_W_HSL_DIO_Out Lib "8154.dll" Alias "_8154_db51_W_HSL_DIO_Out" (ByVal card_ID As Integer, ByVal slave_No As Integer, ByVal out_data As Long) As Integer
Declare Function B_8154_db51_W_HSL_DIO_Channel_Out Lib "8154.dll" Alias "_8154_db51_W_HSL_DIO_Channel_Out" (ByVal card_ID As Integer, ByVal slave_No As Integer, ByVal Channel As Integer, ByVal out_data As Integer) As Integer
Declare Function B_8154_db51_W_HSL_DI8DO8_DIO_In Lib "8154.dll" Alias "_8154_db51_W_HSL_DI8DO8_DIO_In" (ByVal card_ID As Integer, ByVal slave_No As Integer, in_data As Integer) As Integer
Declare Function B_8154_db51_W_HSL_DI8DO8_DIO_Channel_In Lib "8154.dll" Alias "_8154_db51_W_HSL_DI8DO8_DIO_Channel_In" (ByVal card_ID As Integer, ByVal slave_No As Integer, ByVal Channel As Integer, in_data As Integer) As Integer
Declare Function B_8154_db51_W_HSL_DI8DO8_DIO_Out Lib "8154.dll" Alias "_8154_db51_W_HSL_DI8DO8_DIO_Out" (ByVal card_ID As Integer, ByVal slave_No As Integer, ByVal out_data As Integer) As Integer
Declare Function B_8154_db51_W_HSL_DI8DO8_DIO_Channel_Out Lib "8154.dll" Alias "_8154_db51_W_HSL_DI8DO8_DIO_Channel_Out" (ByVal card_ID As Integer, ByVal slave_No As Integer, ByVal Channel As Integer, ByVal out_data As Integer) As Integer
Declare Function B_8154_db51_W_HSL_Read_DIO_Out Lib "8154.dll" Alias "_8154_db51_W_HSL_Read_DIO_Out" (ByVal card_ID As Integer, ByVal slave_No As Integer, out_data_in_ram As Long) As Integer
Declare Function B_8154_db51_W_HSL_Read_DIO_Channel_Out Lib "8154.dll" Alias "_8154_db51_W_HSL_Read_DIO_Channel_Out" (ByVal card_ID As Integer, ByVal slave_No As Integer, ByVal Channel As Integer, out_channel_data_in_ram As Integer) As Integer
Declare Function B_8154_db51_W_HSL_Read_DI8DO8_Out Lib "8154.dll" Alias "_8154_db51_W_HSL_Read_DI8DO8_Out" (ByVal card_ID As Integer, ByVal slave_No As Integer, out_data_in_ram As Integer) As Integer
Declare Function B_8154_db51_W_HSL_Read_DI8DO8_Channel_Out Lib "8154.dll" Alias "_8154_db51_W_HSL_Read_DI8DO8_Channel_Out" (ByVal card_ID As Integer, ByVal slave_No As Integer, ByVal Channel As Integer, out_channel_data_in_ram As Integer) As Integer
Declare Function B_8154_db51_W_HSL_Set_In_Out_Logic Lib "8154.dll" Alias "_8154_db51_W_HSL_Set_In_Out_Logic" (ByVal card_ID As Integer, ByVal slave_No As Integer, ByVal Input_Logic As Integer, ByVal Output_Logic As Integer) As Integer
'
Declare Function B_8154_db51_W_HSL_AI_Start_Read Lib "8154.dll" Alias "_8154_db51_W_HSL_AI_Start_Read" (ByVal card_ID As Integer) As Integer
Declare Function B_8154_db51_W_HSL_AI_Stop_Read Lib "8154.dll" Alias "_8154_db51_W_HSL_AI_Stop_Read" (ByVal card_ID As Integer) As Integer
Declare Function B_8154_db51_W_HSL_AI_Channel_In Lib "8154.dll" Alias "_8154_db51_W_HSL_AI_Channel_In" (ByVal card_ID As Integer, ByVal slave_No As Integer, ByVal Channel As Integer, AI_data As Double) As Integer
Declare Function B_8154_db51_W_HSL_AI_SetConfig Lib "8154.dll" Alias "_8154_db51_W_HSL_AI_SetConfig" (ByVal card_ID As Integer, ByVal slave_No As Integer, ByVal signal_range As Integer, ByVal signal_type As Integer, ByVal cjc_status As Integer) As Integer
Declare Function B_8154_db51_W_HSL_AI_GetConfig Lib "8154.dll" Alias "_8154_db51_W_HSL_AI_GetConfig" (ByVal card_ID As Integer, ByVal slave_No As Integer, signal_range As Integer, signal_type As Integer, cjc_status As Integer) As Integer
Declare Function B_8154_db51_W_HSL_AI_OffsetCalib Lib "8154.dll" Alias "_8154_db51_W_HSL_AI_OffsetCalib" (ByVal card_ID As Integer, ByVal slave_No As Integer) As Integer
Declare Function B_8154_db51_W_HSL_AI_SpanCalib Lib "8154.dll" Alias "_8154_db51_W_HSL_AI_SpanCalib" (ByVal card_ID As Integer, ByVal slave_No As Integer) As Integer
Declare Function B_8154_db51_W_HSL_AI_WriteDefault Lib "8154.dll" Alias "_8154_db51_W_HSL_AI_WriteDefault" (ByVal card_ID As Integer, ByVal slave_No As Integer) As Integer
Declare Function B_8154_db51_W_HSL_AI_SetCJCOffset Lib "8154.dll" Alias "_8154_db51_W_HSL_AI_SetCJCOffset" (ByVal card_ID As Integer, ByVal slave_No As Integer, ByVal CJC_data2 As Double) As Integer
Declare Function B_8154_db51_W_HSL_AI_GetCJCOffset Lib "8154.dll" Alias "_8154_db51_W_HSL_AI_GetCJCOffset" (ByVal card_ID As Integer, ByVal slave_No As Integer, CJC_data As Double) As Integer
Declare Function B_8154_db51_W_HSL_AI_SetChannelStatus Lib "8154.dll" Alias "_8154_db51_W_HSL_AI_SetChannelStatus" (ByVal card_ID As Integer, ByVal slave_No As Integer, ByVal enable_chans As Long) As Integer
Declare Function B_8154_db51_W_HSL_AI_GetChannelStatus Lib "8154.dll" Alias "_8154_db51_W_HSL_AI_GetChannelStatus" (ByVal card_ID As Integer, ByVal slave_No As Integer, enable_chans As Long) As Integer
'
Declare Function B_8154_db51_W_HSL_DIO_Memory_In Lib "8154.dll" Alias "_8154_db51_W_HSL_DIO_Memory_In" (ByVal card_ID As Integer, data_in As Integer) As Integer
Declare Function B_8154_db51_W_HSL_DIO_Memory_Out Lib "8154.dll" Alias "_8154_db51_W_HSL_DIO_Memory_Out" (ByVal card_ID As Integer, data_out As Integer) As Integer
'
'  AI16AO2 Module Use
Declare Function B_8154_db51_W_HSL_AI_Set_Last_Channel Lib "8154.dll" Alias "_8154_db51_W_HSL_AI_Set_Last_Channel" (ByVal card_ID As Integer, ByVal slave_No As Integer, ByVal Last_Channel As Integer) As Integer
Declare Function B_8154_db51_W_HSL_AI_Get_Last_Channel Lib "8154.dll" Alias "_8154_db51_W_HSL_AI_Get_Last_Channel" (ByVal card_ID As Integer, ByVal slave_No As Integer, Last_Channel As Integer) As Integer
Declare Function B_8154_db51_W_HSL_AI_Get_Version Lib "8154.dll" Alias "_8154_db51_W_HSL_AI_Get_Version" (ByVal card_ID As Integer, ByVal slave_No As Integer, Ver As Byte) As Integer
Declare Function B_8154_db51_W_HSL_AIO_LoadConfig Lib "8154.dll" Alias "_8154_db51_W_HSL_AIO_LoadConfig" (ByVal card_ID As Integer, ByVal slave_No As Integer) As Integer
Declare Function B_8154_db51_W_HSL_AIO_SaveConfig Lib "8154.dll" Alias "_8154_db51_W_HSL_AIO_SaveConfig" (ByVal card_ID As Integer, ByVal slave_No As Integer) As Integer
Declare Function B_8154_db51_W_HSL_AO_Channel_Out Lib "8154.dll" Alias "_8154_db51_W_HSL_AO_Channel_Out" (ByVal card_ID As Integer, ByVal slave_No As Integer, ByVal AO_Ch_No As Integer, ByVal AO_data As Double) As Integer
Declare Function B_8154_db51_W_HSL_AIO_Channel_InOut Lib "8154.dll" Alias "_8154_db51_W_HSL_AIO_Channel_InOut" (ByVal card_ID As Integer, ByVal slave_No As Integer, ByVal AI_CH_No As Integer, AI_data As Double, ByVal AO_Ch_No As Integer, ByVal AO_data As Double) As Integer
Declare Function B_8154_db51_W_HSL_AO_Channel_In Lib "8154.dll" Alias "_8154_db51_W_HSL_AO_Channel_In" (ByVal card_ID As Integer, ByVal slave_No As Integer, ByVal AO_Ch_No As Integer, AO_data As Integer) As Integer
Declare Function B_8154_db51_W_HSL_AO_OffsetCalib Lib "8154.dll" Alias "_8154_db51_W_HSL_AO_OffsetCalib" (ByVal card_ID As Integer, ByVal slave_No As Integer, ByVal DA_CH As Integer) As Integer
Declare Function B_8154_db51_W_HSL_AO_GainCalib Lib "8154.dll" Alias "_8154_db51_W_HSL_AO_GainCalib" (ByVal card_ID As Integer, ByVal slave_No As Integer, ByVal DA_CH As Integer) As Integer
'
'  TC08 Use
Declare Function B_8154_db51_W_HSL_TC08_Offset_Calib Lib "8154.dll" Alias "_8154_db51_W_HSL_TC08_Offset_Calib" (ByVal card_ID As Integer, ByVal slave_No As Integer, ByVal Channel As Integer) As Integer
Declare Function B_8154_db51_W_HSL_TC08_Span_Calib Lib "8154.dll" Alias "_8154_db51_W_HSL_TC08_Span_Calib" (ByVal card_ID As Integer, ByVal slave_No As Integer, ByVal Channel As Integer) As Integer
Declare Function B_8154_db51_W_HSL_TC08_Get_Temperature Lib "8154.dll" Alias "_8154_db51_W_HSL_TC08_Get_Temperature" (ByVal card_ID As Integer, ByVal slave_No As Integer, ByVal Channel As Integer, ByVal TC_type As Integer, Temperature As Double) As Integer
'
'
' /****************************************************************************/
' /* HSL Motion Function Declerations                                        */
' /****************************************************************************/
Declare Function B_8154_db51_HSL_M_get_version Lib "8154.dll" Alias "_8154_db51_HSL_M_get_version" (ByVal card_ID As Integer, ByVal M_No As Integer, CPLD_Ver As Byte, Kernel_Ver As Long, Software_Ver As Long) As Integer
'
'  Pulse I/O Configuration
Declare Function B_8154_db51_HSL_M_set_pls_outmode Lib "8154.dll" Alias "_8154_db51_HSL_M_set_pls_outmode" (ByVal card_ID As Integer, ByVal AxisNo As Integer, ByVal pls_outmode As Integer) As Integer
Declare Function B_8154_db51_HSL_M_set_pls_iptmode Lib "8154.dll" Alias "_8154_db51_HSL_M_set_pls_iptmode" (ByVal card_ID As Integer, ByVal AxisNo As Integer, ByVal pls_iptmode As Integer, ByVal pls_logic As Integer) As Integer
Declare Function B_8154_db51_HSL_M_set_feedback_src Lib "8154.dll" Alias "_8154_db51_HSL_M_set_feedback_src" (ByVal card_ID As Integer, ByVal AxisNo As Integer, ByVal Src As Integer) As Integer
'
'  Velocity Mode motion
Declare Function B_8154_db51_HSL_M_tv_move Lib "8154.dll" Alias "_8154_db51_HSL_M_tv_move" (ByVal card_ID As Integer, ByVal AxisNo As Integer, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double) As Integer
Declare Function B_8154_db51_HSL_M_sv_move Lib "8154.dll" Alias "_8154_db51_HSL_M_sv_move" (ByVal card_ID As Integer, ByVal AxisNo As Integer, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal SVacc As Double) As Integer
Declare Function B_8154_db51_HSL_M_v_change Lib "8154.dll" Alias "_8154_db51_HSL_M_v_change" (ByVal card_ID As Integer, ByVal AxisNo As Integer, ByVal NewVel As Double, ByVal Tacc As Double) As Integer
Declare Function B_8154_db51_HSL_M_sd_stop Lib "8154.dll" Alias "_8154_db51_HSL_M_sd_stop" (ByVal card_ID As Integer, ByVal AxisNo As Integer, ByVal Tdec As Double) As Integer
Declare Function B_8154_db51_HSL_M_emg_stop Lib "8154.dll" Alias "_8154_db51_HSL_M_emg_stop" (ByVal card_ID As Integer, ByVal AxisNo As Integer) As Integer
Declare Function B_8154_db51_HSL_M_fix_speed_range Lib "8154.dll" Alias "_8154_db51_HSL_M_fix_speed_range" (ByVal card_ID As Integer, ByVal AxisNo As Integer, ByVal MaxVel As Double) As Integer
Declare Function B_8154_db51_HSL_M_unfix_speed_range Lib "8154.dll" Alias "_8154_db51_HSL_M_unfix_speed_range" (ByVal card_ID As Integer, ByVal AxisNo As Integer) As Integer
Declare Function B_8154_db51_HSL_M_get_current_speed Lib "8154.dll" Alias "_8154_db51_HSL_M_get_current_speed" (ByVal card_ID As Integer, ByVal AxisNo As Integer, speed As Double) As Integer
Declare Function B_8154_db51_HSL_M_verify_speed Lib "8154.dll" Alias "_8154_db51_HSL_M_verify_speed" (ByVal card_ID As Integer, ByVal M_No As Integer, ByVal StrVel As Double, ByVal MaxVel As Double, minAccTime As Double, maxAccT As Double, ByVal MaxSpeed As Double) As Integer
'
'  Single Axis Motion
Declare Function B_8154_db51_HSL_M_start_tr_move Lib "8154.dll" Alias "_8154_db51_HSL_M_start_tr_move" (ByVal card_ID As Integer, ByVal AxisNo As Integer, ByVal Dist As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double) As Integer
Declare Function B_8154_db51_HSL_M_start_ta_move Lib "8154.dll" Alias "_8154_db51_HSL_M_start_ta_move" (ByVal card_ID As Integer, ByVal AxisNo As Integer, ByVal Pos As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double) As Integer
